--- a/index.html
+++ b/index.html
@@ -189,7 +189,124 @@
                       <p>Достоинства (<span>4</span>)</p>
                     </div>
                     <div class="description__text__box">
+                      <img src="img/minus.svg" alt="" />
+                      <p>Достоинства (<span>4</span>)</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="lastRev__description__moreBTN">
+                  <img src="img/eye.svg" alt="" />
+                  <a href="#">Читать весь отзыв</a>
+                </div>
+              </div>
+            </div>
+            <div class="lastReviews__box">
+              <div class="lastRevBox__preview">
+                <img src="img/preview.png" alt="" />
+              </div>
+              <div class="lastRevBox__description">
+                <div class="lastRev__description__title">
+                  <h1>Электроника</h1>
+                  <h2>Квадрокоптер Phantom RX-1030</h2>
+                  <p>сегодня в 10:44</p>
+                </div>
+                <div class="lastRev__description__autor">
+                  <img src="img/autor.png" alt="" />
+                  <p>Аноним</p>
+                </div>
+                <div class="lastRev__description__text">
+                  <h3>“Лучший квадрокоптер за свои деньги”</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Enim sed porttitor diam porttitor sed. Cursus sem amet, at
+                    parturient id.onsectetur adipiscing elit. Enim sed porttitor
+                    diam porttitor sed. Cursus sem amet, at partu...
+                  </p>
+                  <div class="lastRev__description__text__results">
+                    <div class="description__text__box">
                       <img src="img/plus.svg" alt="" />
+                      <p>Достоинства (<span>4</span>)</p>
+                    </div>
+                    <div class="description__text__box">
+                      <img src="img/minus.svg" alt="" />
+                      <p>Достоинства (<span>4</span>)</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="lastRev__description__moreBTN">
+                  <img src="img/eye.svg" alt="" />
+                  <a href="#">Читать весь отзыв</a>
+                </div>
+              </div>
+            </div>
+            <div class="lastReviews__box">
+              <div class="lastRevBox__preview">
+                <img src="img/preview.png" alt="" />
+              </div>
+              <div class="lastRevBox__description">
+                <div class="lastRev__description__title">
+                  <h1>Электроника</h1>
+                  <h2>Квадрокоптер Phantom RX-1030</h2>
+                  <p>сегодня в 10:44</p>
+                </div>
+                <div class="lastRev__description__autor">
+                  <img src="img/autor.png" alt="" />
+                  <p>Аноним</p>
+                </div>
+                <div class="lastRev__description__text">
+                  <h3>“Лучший квадрокоптер за свои деньги”</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Enim sed porttitor diam porttitor sed. Cursus sem amet, at
+                    parturient id.onsectetur adipiscing elit. Enim sed porttitor
+                    diam porttitor sed. Cursus sem amet, at partu...
+                  </p>
+                  <div class="lastRev__description__text__results">
+                    <div class="description__text__box">
+                      <img src="img/plus.svg" alt="" />
+                      <p>Достоинства (<span>4</span>)</p>
+                    </div>
+                    <div class="description__text__box">
+                      <img src="img/minus.svg" alt="" />
+                      <p>Достоинства (<span>4</span>)</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="lastRev__description__moreBTN">
+                  <img src="img/eye.svg" alt="" />
+                  <a href="#">Читать весь отзыв</a>
+                </div>
+              </div>
+            </div>
+            <div class="lastReviews__box">
+              <div class="lastRevBox__preview">
+                <img src="img/preview.png" alt="" />
+              </div>
+              <div class="lastRevBox__description">
+                <div class="lastRev__description__title">
+                  <h1>Электроника</h1>
+                  <h2>Квадрокоптер Phantom RX-1030</h2>
+                  <p>сегодня в 10:44</p>
+                </div>
+                <div class="lastRev__description__autor">
+                  <img src="img/autor.png" alt="" />
+                  <p>Аноним</p>
+                </div>
+                <div class="lastRev__description__text">
+                  <h3>“Лучший квадрокоптер за свои деньги”</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Enim sed porttitor diam porttitor sed. Cursus sem amet, at
+                    parturient id.onsectetur adipiscing elit. Enim sed porttitor
+                    diam porttitor sed. Cursus sem amet, at partu...
+                  </p>
+                  <div class="lastRev__description__text__results">
+                    <div class="description__text__box">
+                      <img src="img/plus.svg" alt="" />
+                      <p>Достоинства (<span>4</span>)</p>
+                    </div>
+                    <div class="description__text__box">
+                      <img src="img/minus.svg" alt="" />
                       <p>Достоинства (<span>4</span>)</p>
                     </div>
                   </div>
