--- a/index.html
+++ b/index.html
@@ -17,124 +17,126 @@
     <header>
       <div class="wrap">
         <div class="header__wrap">
-          <a href="#"><img src="img/logo.svg" alt="" /></a>
-          <span class="WreiteReviews">
+          <a href="index.html"><img src="img/logo.svg" alt="" /></a>
+          <a href="current.html" class="WreiteReviews">
             <img src="img/pencil.svg" alt="" />
             <p>Написать отзыв</p>
-          </span>
+          </a>
         </div>
       </div>
     </header>
     <section class="main">
       <div class="wrap">
         <div class="categories">
-          <h1>Категории</h1>
-          <div class="categories__box">
-            <a href="#" class="categories__box__main">Авто и мото</a>
-            <ul>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Автозапчасти</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="11Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="itd.com,#,#,#,#,#,#"
-                  >Автохимия и масла</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="22Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Аксессуары</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="33Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Водный транспорт</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="55Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Грузовые автомобили</a
-                >
-              </li>
-              <li>
-                <a href="#" data-subcategories="" data-href=""
-                  >Дома на колесах</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="categories__box">
-            <a href="#" class="categories__box__main">Авто и мото</a>
-            <ul>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Автозапчасти</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="11Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Автохимия и масла</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="22Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Аксессуары</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="33Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Водный транспорт</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="55Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Грузовые автомобили</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  data-subcategories="66Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
-                  data-href="vk.com,#,#,#,#,#,#"
-                  >Дома на колесах</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="subCategoriesBox">
-            <p></p>
-            <div class="subCategoriesBox__value"></div>
+          <div class="categories__wrap">
+            <h1>Категории</h1>
+            <div class="categories__box">
+              <a href="#" class="categories__box__main">Авто и мото</a>
+              <ul>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Автозапчасти</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="11Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="itd.com,#,#,#,#,#,#"
+                    >Автохимия и масла</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="22Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Аксессуары</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="33Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Водный транспорт</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="55Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Грузовые автомобили</a
+                  >
+                </li>
+                <li>
+                  <a href="#" data-subcategories="" data-href=""
+                    >Дома на колесах</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="categories__box">
+              <a href="#" class="categories__box__main">Авто и мото</a>
+              <ul>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Автозапчасти</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="11Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Автохимия и масла</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="22Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Аксессуары</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="33Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Водный транспорт</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="55Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Грузовые автомобили</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    data-subcategories="66Автосвет и оптика, Автосвет и оптика, Бензонасосы, Карбюраторы, Стойки стабилизатора, Тормозные диски, Фильтры масляные"
+                    data-href="vk.com,#,#,#,#,#,#"
+                    >Дома на колесах</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="subCategoriesBox">
+              <p></p>
+              <div class="subCategoriesBox__value"></div>
+            </div>
           </div>
         </div>
         <div class="mainScrean">
@@ -239,6 +241,9 @@
                 </div>
               </div>
             </div>
+            <div class="lastReviews__bunner">
+              <a href="#"><img src="img/banner.png" alt="" /></a>
+            </div>
             <div class="lastReviews__box">
               <div class="lastRevBox__preview">
                 <img src="img/preview.png" alt="" />
@@ -318,9 +323,12 @@
               </div>
             </div>
           </section>
+          <div id="pagination"></div>
         </div>
       </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/pagination2.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
